fix user register
